# velvethyper

./: .gitignore  DESIGN_SPEC.md  LICENSE  Makefile  README.md  RELEASE.md  ROADMAP.md  USAGE.md  cleanup.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
apps/cli_engine/: harden.py  main.py
apps/desktop_ui/: CHANGELOG.md  README.md  electron-builder.yml  package-lock.json  package.json  tailwind.config.js
apps/desktop_ui/src/main/: index.ts
apps/desktop_ui/src/main/ipc/: profile.ipc.ts  system.ipc.ts  vmx.ipc.ts
apps/desktop_ui/src/preload/: index.ts
apps/desktop_ui/src/renderer/: index.html
apps/desktop_ui/src/renderer/src/: App.tsx  env.d.ts
apps/desktop_ui/src/renderer/src/assets/: main.css
apps/desktop_ui/src/renderer/src/components/: HardeningCard.tsx  IdentityCard.tsx  StatusBar.tsx  TelemetryConsole.tsx
apps/desktop_ui/src/renderer/src/hooks/: useVmxState.ts
docs/: KNOWN_ISSUES.md
docs/superpowers/specs/: 2026-04-16-production-grade-refactor-design.md
libs/firmware_patcher/: README.md
libs/native_utils/: Makefile  README.md  common.h  launcher.cpp  sanitizer.cpp  verifier.cpp
libs/spoofer_core/: cpu_masker.py  profile_manager.py  vmx_hardener.py
libs/spoofer_core/assets/: hardware_profiles.json
profiles/: Default_Gaming_PC.json
scripts/: bump_readme.py  clean.py
